# rust-quarto

./: Cargo.toml  README.md
quarto/: Cargo.toml
quarto/src/: lib.rs
src/: board.rs  common.rs  game.rs  lib.rs  local.rs  main.rs  network.rs  piece.rs  splash.rs
tests/: props.rs
testutil/: Cargo.toml
testutil/src/: lib.rs
