[package]
name = "quarto"
version = "0.1.0"
authors = ["Nathaniel May <nate@nathanielmay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.6.1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.2"