[package]
name = "quarto"
version = "0.1.0"
authors = ["Nathaniel May <nate@nathanielmay.com>"]
edition = "2018"

[dependencies]
either = "1.6.1"
structopt = "0.3.13"
termion = "1.5.6"
serde_json = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
tide = "0.14.0"
async-std = { version = "1.6.0", features = ["attributes"] }
base64 = "0.13.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.2"
itertools = "0.6.0"
arrayvec = "0.4.10"